--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@chrisoakman/chessboardjs": "^1.0.0",
+    "@rails/actioncable": "^6.0.3-1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "chessboardjsx": "^2.4.2",
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-chess": "^1.1.1",
