--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.0",
     "chessboardjsx": "^2.4.2",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
@@ -15,6 +16,9 @@
     "react-chess": "^1.1.1",
     "react-chessboardjs-wrapper": "^0.4.2",
     "react-dom": "^16.13.1",
+    "react-fade-in": "^1.0.0",
+    "react-loading": "^2.0.3",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
